@@ -4,7 +4,7 @@ before_script:
   - gulp
 #  - gulp instrument
 node_js:
- - "6"
+ - "8"
  - "node"
 # - "4"   does not support sourcemaps
 after_script:
