@@ -1,12 +1,13 @@
 {
   "name": "mgnlq_testmodel",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "example model data",
   "main": "js/index.js",
   "typings": "js/index",
   "scripts": {
     "build": "gulp",
     "test": "gulp test",
+    "version": "npm show mgnlq_testmodel@* version",
     "instrument": "jscoverage js/ gen_cov/ --exclude *.map,*.d.ts",
     "testcov2": "export FSD_COVERAGE=1 && nodeunit test/model test/match --reporter=lcov",
     "testcov": "export FSD_COVERAGE=1 && nodeunit test/model test/match --reporter=lcov | coveralls"
@@ -26,8 +27,6 @@
     "url": "https://github.com/jfseb/mgnlq_testmodel/issues"
   },
   "homepage": "https://github.com/jfseb/mgnlq_testmodel#readme",
-  "devDependencies": {
-  },
-  "dependencies": {
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
