@@ -1,3 +1,3 @@
 [
-  "iupacs", "philoelements", "cosmos", "r3trans", "fioriapps", "sobj_tables", "fioribecatalogs"
+  "iupacs", "philoelements", "cosmos", "r3trans", "fioriapps", "sobj_tables", "fioribecatalogs", "demomdls"
 ]
